crates/nextmeeting-core/src/format/snapshots/nextmeeting_core__format__golden_tests__tty_special_characters.snap
---
source: crates/nextmeeting-core/src/format/golden_tests.rs
expression: output
---
[
    FormattedMeeting {
        text: "In 15 minutes - Meeting: Q&A <Session> \"Test\"",
        urgency: Upcoming,
        meeting: MeetingView {
            id: "evt-special",
            provider_name: "unknown",
            title: "Meeting: Q&A <Session> \"Test\"",
            start_local: 2025-02-05T11:15:00+01:00,
            end_local: 2025-02-05T11:45:00+01:00,
            is_all_day: false,
            is_ongoing: false,
            primary_link: None,
            secondary_links: [],
            calendar_url: None,
            calendar_id: "primary",
            user_response_status: Unknown,
            other_attendee_count: 0,
            location: None,
            description: None,
            attendees: [],
            reminder_minutes: None,
        },
    },
]
